--- a/composer.json
+++ b/composer.json
@@ -18,14 +18,14 @@
     "php": ">=7.4 || >=8.1",
     "doctrine/doctrine-bundle": "^2.5",
     "doctrine/doctrine-migrations-bundle": "^3.2",
-    "symfony/console": "5.4.* || 6.*",
-    "symfony/http-kernel": "5.4.* || 6.*",
-    "symfony/property-access": "5.4.* || 6.*",
-    "symfony/translation": "5.4.* || 6.*",
-    "symfony/yaml": "5.4.* || 6.*",
+    "symfony/console": "5.4.* || 6.* || 7.*",
+    "symfony/http-kernel": "5.4.* || 6.* || 7.*",
+    "symfony/property-access": "5.4.* || 6.* || 7.*",
+    "symfony/translation": "5.4.* || 6.* || 7.*",
+    "symfony/yaml": "5.4.* || 6.* || 7.*",
     "twig/twig": "2.15.* || ^3.5",
     "pagerfanta/pagerfanta": "^2.6 || ^3.6 || ^4.0",
-    "symfony/form": "5.4.* || 6.*"
+    "symfony/form": "5.4.* || 6.* || 7.*"
   },
   "prefer-stable": true,
   "autoload": {
